--- a/Makefile.common
+++ b/Makefile.common
@@ -102,17 +102,19 @@ git-crypt-unlock:
 		fi
 
 kubeconfig:
-	sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
+	-sudo cp /run/secrets/kubernetes.io/serviceaccount/ca.crt /usr/local/share/ca-certificates/
 	sudo cp ~/etc/ca.crt /usr/local/share/ca-certificates/
 	sudo update-ca-certificates
-	kubectl config set-cluster pod --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
-	kubectl config set-credentials pod --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
-	kubectl config set-context pod --cluster=pod --user=pod
-	kubectl config set-cluster argocd --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt
-	kubectl config set-credentials argocd --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"
-	kubectl config set-context argocd --cluster=pod --user=argocd --namespace argocd
-	kubectl config use-context pod
-	skaffold config set --kube-context pod local-cluster true
+	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then \
+		kubectl config set-cluster pod --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt; \
+		kubectl config set-credentials pod --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"; \
+		kubectl config set-context pod --cluster=pod --user=pod; \
+		kubectl config set-cluster argocd --server=https://kubernetes.default.svc.cluster.local --embed-certs --certificate-authority=/run/secrets/kubernetes.io/serviceaccount/ca.crt; \
+		kubectl config set-credentials argocd --token="$$(cat /run/secrets/kubernetes.io/serviceaccount/token)"; \
+		kubectl config set-context argocd --cluster=pod --user=argocd --namespace argocd; \
+		kubectl config use-context pod; \
+		skaffold config set --kube-context pod local-cluster true; \
+		fi
 	#kumactl config control-planes add --overwrite --name pod --address http://kuma-control-plane-x-kuma-x-vc0.vc0.svc:5681
 	if vcluster connect vcluster --kube-config ~/.kube/vcluster --kube-config-context-name vcluster --update-current=false --server vcluster.vcluster.svc.cluster.local; then \
 		env KUBECONFIG=~/.kube/config:~/.kube/vcluster kubectl config view --flatten > ~/.kube/config.1; \
