more fly kubeconf fixes

--- a/Makefile.common
+++ b/Makefile.common
@@ -84,7 +84,7 @@ login:
 	$(MAKE) git-crypt-unlock
 	if ! gh auth status; then echo $(MAKE) github-login; fi
 	$(MAKE) kubeconfig
-	$(MAKE) argocd-login
+	-$(MAKE) argocd-login
 
 github-login:
 	gh auth login -p https -h github.com -w
