enable ssh mode in tailscale

--- a/d/k3d/Dockerfile
+++ b/d/k3d/Dockerfile
@@ -2,6 +2,9 @@ FROM rancher/k3s:v1.23.9-k3s1
 
 ARG DEFN_DEV_ARCHIVE
 
+RUN echo root:x:0:0:root:/root:/bin/sh >> /etc/passwd
+RUN echo root:x:0: >> /etc/group
+
 RUN mv /bin/k3s /bin/k3s-real
 COPY k3s-wrapper.sh /bin/k3s
 
