--- a/Makefile.common
+++ b/Makefile.common
@@ -3,7 +3,7 @@ cache ?=
 push ?= --push
 workdir ?= /home/ubuntu
 tilt_port ?= 10350
-name ?= $(shell uname -n | cut -d. -f1 | tr A-Z a-z | perl -pe 's{-\d+$$}{}')
+name ?= $(shell uname -n | cut -d. -f1 | tr A-Z a-z | perl -pe 's{-\d$$}{}')
 k3d_name ?= $(name)
 context ?= k3d-$(name)
 podname ?= $(name)-0
@@ -154,12 +154,9 @@ join-inner:
 
 cluster-inner:
 	-k3d cluster delete $(name)
-	if [[ -x "$$(type -P tailscale)" ]]; then if tailscale ip 2>&1 | grep NeedsLogin; then sudo tailscale up; fi; fi
-	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 \
 		-p    "80:8000@server:0" \
 		-p   "443:8443@server:0"
 	docker update --restart=no $(context)-server-0
-	docker exec $(context)-server-0 touch /etc/passwd
 	-cd tf/$(name) && make init plan apply
 
 vault-unseal:
