--- a/Makefile.common
+++ b/Makefile.common
@@ -153,7 +153,7 @@ join-inner:
 	-k3d node create $(name) --role agent --image $(image) --token "$(token)" --cluster "$(join)"
 
 cluster-inner:
-	-k3d cluster delete $(name) \
+	-k3d cluster delete $(name)
 	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 \
 		-p    "80:8000@server:0" \
 		-p   "443:8443@server:0"
