--- a/Makefile.site
+++ b/Makefile.site
@@ -81,10 +81,9 @@ cert:
 	rm -f meh.json
 
 provision-digital-ocean:
-	-git clone https://github.com/jojomomojo/password-store work/password-store
-	sudo curl -sSL -o /usr/local/bin/k3d https://github.com/k3d-io/k3d/releases/download/v5.4.4/k3d-linux-amd64
-	sudo chmod 755 /usr/local/bin/k3d
-	make cluster
+	echo k3d 5.4.4 >> .tool-versions
+	bin/e asdf install nk3d
+	bin/e make cluster
 
 debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
