--- a/Makefile.common
+++ b/Makefile.common
@@ -38,6 +38,9 @@ init-inner:
 	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
 	if ! test -d work/.; then mkdir -p work; fi
 
+	-sudo chgrp docker /var/run/docker.sock
+	-sudo chmod 770 /var/run/docker.sock
+
 	$(MAKE) github-login
 	if [[ ! -f .gitconfig ]]; then \
 		rm -f .gitconfig; \
@@ -56,12 +59,10 @@ init-inner:
 	if echo $$VSCODE_GIT_ASKPASS_NODE | grep local/lib/code-server; then $(MAKE) init-code-server; else $(MAKE) init-vscode; fi
 
 	$(MAKE) git-crypt-unlock
-
 	$(MAKE) kubeconfig
 	$(MAKE) login
 
-	-sudo chgrp docker /var/run/docker.sock
-	-sudo chmod 770 /var/run/docker.sock
+	sudo tailscale up --ssh --accept-dns=false
 
 init-code-server:
 	-gpg-agent --daemon
