--- a/d/k3d/Dockerfile
+++ b/d/k3d/Dockerfile
@@ -4,6 +4,7 @@ ARG DEFN_DEV_ARCHIVE
 
 RUN echo root:x:0:0:root:/root:/bin/sh >> /etc/passwd
 RUN echo root:x:0: >> /etc/group
+RUN install -d -m 0700 -o root -g root /root
 
 RUN mv /bin/k3s /bin/k3s-real
 COPY k3s-wrapper.sh /bin/k3s
