--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,7 +1,9 @@
+domain ?= tiger-mamba.ts.net
+
 %:
 	-flyctl secrets set -a $@ --detach \
 		DEFN_DEV_TAILSCALE_STATE="$$(pass tailscale_$@)" \
-		DEFN_DEV_HOST="$@.tiger-mamba.ts.net" \
+		DEFN_DEV_HOST="$@.$(domain)" \
 		PASSWORD="$$(pass pass-code-server)"
 	flyctl deploy -a $@ --remote-only --config app.toml
 
