--- a/Makefile.site
+++ b/Makefile.site
@@ -57,6 +57,7 @@ test:
 
 images:
 	pass hello
+	if ! test -d work/dev/.; then git clone https://github.com/defn/dev work/dev; fi
 	if [[ "$(shell pwd)" == "$(HOME)" ]]; then git pull; git push; cd work/dev && git pull && $(MAKE) $@; else repo=$(repo); earthly --remote-cache=$(cache)defn/cache:updates-$@ --no-output $(push) +images --repo=$${repo:-quay.io/}; fi
 
 amd arm:
