--- a/Makefile.site
+++ b/Makefile.site
@@ -89,7 +89,7 @@ this:
 	mkdir tmp
 	mkdir -p tmp/$(name)/var/lib/tailscale
 	mkdir -p tmp/$(name)/var/lib/tailscale/pod
-	(cd tmp/$(name)/var/lib/tailscale && pass tailscale_k3d-$(name) | base64 -d | tar xvf -
+	(cd tmp/$(name)/var/lib/tailscale && pass tailscale_k3d-$(name) | base64 -d | tar xvf -)
 	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64)" DEFN_DEV_HOST=k3d-$(name).${domain} DEFN_DEV_HOST_API=127.0.0.1 $(MAKE) cluster name=$(name)
 	kubectl rollout -n argocd status deployment argocd-server --watch
