sync password store

--- a/Makefile.site
+++ b/Makefile.site
@@ -94,4 +94,5 @@ this:
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64)" DEFN_DEV_HOST=k3d-$(name).${domain} DEFN_DEV_HOST_API=127.0.0.1 $(MAKE) cluster name=$(name)
 	kubectl rollout -n argocd status deployment argocd-server --watch
 	kubectl rollout -n default status statefulset $(name) --watch
+	rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete
 
