get domain from tailscale

--- a/Makefile.common
+++ b/Makefile.common
@@ -8,7 +8,7 @@ k3d_name ?= $(name)
 context ?= k3d-$(name)
 podname ?= $(name)-0
 control ?= $(shell echo $(name) | sed s/-0//)
-domain ?= tiger-mamba.ts.net
+domain ?= $(shell tailscale cert 2>&1 | grep 'For domain' | cut -d'"' -f2 | cut -d. -f2-)
 image ?= defn.dev/defn/k3d
 
 dummy_ip ?= 169.254.32.1
