--- a/tf/Makefile
+++ b/tf/Makefile
@@ -1,6 +1,5 @@
 SHELL := /bin/bash
 
-workdir ?= /home/ubuntu
 podname ?= $(shell basename $(shell pwd))-0
 context ?= k3d-$(shell basename $(shell pwd))
 domain ?= tiger-mamba.ts.net
@@ -73,7 +72,7 @@ kubeconfig:
 	doctl kubernetes cluster kubeconfig save remo
 
 attach:
-	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+/home/ubuntu
 
 archive:
 	pass hello
