--- a/Makefile.common
+++ b/Makefile.common
@@ -1,7 +1,6 @@
 repo ?=
 cache ?=
 push ?= --push
-workdir ?= /home/ubuntu
 tilt_port ?= 10350
 name ?= $(shell uname -n | cut -d. -f1 | tr A-Z a-z | perl -pe 's{-\d$$}{}')
 k3d_name ?= $(name)
@@ -67,11 +66,6 @@ init-code-server:
 
 init-vscode:
 	@true
-
-init-sets:
-	cd "$${DEFN_DEV_WORKDIR:-$${HOME}}" && kubectl --context argocd apply -f e/k3d-$(control).yaml
-	argocd app sync k3d-$(control)
-	argocd app list
 
 tilt:
 	env tilt up --context pod --port $(tilt_port)
@@ -142,10 +136,10 @@ gh:
 	for a in $$(grep curl Earthfile | grep github.com | perl -pe 's{.*github.com/}{}; s{(.*?/.*?)/.*}{$$1}' | sort); do gh release list --repo "$$a" --exclude-drafts | cat | perl -pe 's{[ \t]+}{ }g' | awk '{print $$1,$$(NF-1)}' | sort | sed "s#^#$$a #"; done > .tool-versions-gh
 
 attach:
-	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=$(context)+namespace=default+podname=$(podname)+name=dev+/home/ubuntu
 
 attach-remo:
-	code --folder-uri vscode-remote://k8s-container+context=remo+namespace=default+podname=dev-0+name=dev+$(workdir)
+	code --folder-uri vscode-remote://k8s-container+context=remo+namespace=default+podname=dev-0+name=dev+/home/ubuntu
 
 join:
 	cd d/k3d && $(MAKE) build name=$(context)
