init site doesnt work on fly

--- a/Makefile.site
+++ b/Makefile.site
@@ -1,11 +1,12 @@
 include Makefile.common
 
 init-site:
-	@pass hello
-	$(MAKE) vault-unseal
-	@aws --profile meh sts get-caller-identity
-	$(MAKE) vault-seal
-	cd tf/do && $(MAKE) archive name=defn && $(MAKE) archive name=global
+	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then \
+		$(MAKE) vault-unseal; \
+		@aws --profile meh sts get-caller-identity; \
+		$(MAKE) vault-seal; \
+		cd tf/do && $(MAKE) archive name=defn && $(MAKE) archive name=global; \
+		fi
 
 restart: # Restart everything
 	git pull
