--- a/Makefile.common
+++ b/Makefile.common
@@ -151,9 +151,7 @@ join-inner:
 
 cluster-inner:
 	-k3d cluster delete $(name)
-	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 \
-		-p    "80:8000@server:0" \
-		-p   "443:8443@server:0"
+	k3d cluster create $(name) --config k3d.yaml --k3s-node-label env=$(name)@server:0 $(shell if test -z "$${DEFN_DEV_HEADLESS:-}"; then -p "80:8000@server:0" -p "443:8443@server:0"; fi)
 	docker update --restart=no $(context)-server-0
 	-cd tf/$(name) && make init plan apply
 
