--- a/Makefile.site
+++ b/Makefile.site
@@ -84,6 +84,7 @@ provision-digital-ocean:
 debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
 
+# env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent
 this:
 	-$(MAKE) macos
 	rm -rf tmp
@@ -94,7 +95,7 @@ this:
 	(cd tmp/$(name)/var/lib/tailscale/pod && pass tailscale_$(name)-0 | base64 -d | tar xvf -)
 	env DEFN_DEV_ARCHIVE="$$(cd tmp/$(name) && tar cvf - . | base64 | xargs | sed 's# ##g')" \
 		DEFN_DEV_HOST=k3d-$(name).${domain} \
-		DEFN_DEV_HOST_API=127.0.0.1 \
+		DEFN_DEV_HOST_API="$${DEFN_DEV_HOST_API:-127.0.0.1}" \
 		DEFN_DEV_HOST_PORT="$${DEFN_DEV_HOST_PORT:-6443}" \
 		$(MAKE) cluster name=$(name)
 	kubectl rollout -n argocd status deployment argocd-server --watch
