dont add global, defn

--- a/Makefile.site
+++ b/Makefile.site
@@ -5,7 +5,7 @@ init-site:
 		$(MAKE) vault-unseal; \
 		@aws --profile meh sts get-caller-identity; \
 		$(MAKE) vault-seal; \
-		cd tf/do && $(MAKE) archive name=defn && $(MAKE) archive name=global; \
+		cd tf/do && echo $(MAKE) archive name=defn && echo $(MAKE) archive name=global; \
 		fi
 
 restart: # Restart everything
