--- a/k/kuma-remote/kustomization.yaml
+++ b/k/kuma-remote/kustomization.yaml
@@ -10,12 +10,7 @@ helmCharts:
   valuesInline:
     controlPlane:
       mode: zone
-      zone: vc1
-      kdsGlobalAddress: grpcs://169.254.32.1:5685
+      zone: grove
+      kdsGlobalAddress: grpcs://100.103.92.51:5685
     ingress:
       enabled: true
-      service:
-        port: 10001
-
-patchesStrategicMerge:
-- deployment-kuma-ingress.yaml
