--- a/Makefile.site
+++ b/Makefile.site
@@ -100,6 +100,6 @@ this:
 		$(MAKE) cluster name=$(name)
 	kubectl rollout -n argocd status deployment argocd-server --watch
 	if kubectl rollout -n default status statefulset $(name) --watch; then \
-		rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete;
+		rsync -ia ~/.password-store/ ubuntu@$(name)-0:/work/password-store --progress --delete; \
 		fi
 
