otbound to nginx

--- a/caddy/kuma/dev-dp.yaml
+++ b/caddy/kuma/dev-dp.yaml
@@ -10,3 +10,7 @@ networking:
       servicePort: 5000
       tags:
         kuma.io/service: registry
+  outbound:
+    - port: 6001
+      tags:
+        kuma.io/service: nginx_default_svc_80
