name dp after the pod or host

--- a/caddy/kuma/grove-dp.yaml
+++ b/caddy/kuma/grove-dp.yaml
@@ -1,8 +1,8 @@
-# kumactl generate dataplane-token > /tmp/dev-token
-# kuma-dp run --cp-address=https://127.0.0.1:5678 --dataplane-token-file=/tmp/dev-token --dataplane-file=dev-dp.yaml
+# kumactl generate dataplane-token > /tmp/grove-token
+# kuma-dp run --cp-address=https://127.0.0.1:5678 --dataplane-token-file=/tmp/grove-token --dataplane-file=grove-dp.yaml
 type: Dataplane
 mesh: default
-name: registry
+name: grove
 networking:
   address: 100.115.182.58
   inbound:
