--- a/caddy/kuma/immanent-dp.yaml
+++ b/caddy/kuma/immanent-dp.yaml
@@ -7,9 +7,9 @@ networking:
   address: 100.121.162.1
   inbound:
     - port: 5001
-      servicePort: 5000
+      servicePort: 4999
       tags:
-        kuma.io/service: registry
+        kuma.io/service: nginx
   outbound:
     - port: 6001
       tags:
