enable strict mode

--- a/caddy/kuma/mesh.yaml
+++ b/caddy/kuma/mesh.yaml
@@ -9,7 +9,7 @@ spec:
     backends:
       - name: ca-1
         type: builtin
-        mode: PERMISSIVE
+        mode: STRICT # PERMISSIVE
         dpCert:
           rotation:
             expiration: 1d
