get rid of localyhost

--- a/caddy/kuma/nginx.yaml
+++ b/caddy/kuma/nginx.yaml
@@ -22,6 +22,9 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
+      - name: dev
+        image: quay.io/defn/dev
+        command: ["tail", "-f", "/dev/null"]
 ---
 apiVersion: v1
 kind: Service
