copy tailscale state and certs

--- a/tf/fly/flies/Makefile
+++ b/tf/fly/flies/Makefile
@@ -1,8 +1,14 @@
 domain ?= tiger-mamba.ts.net
 
 %:
+	rm -rf tmp
+	mkdir tmp
+	mkdir -p tmp/$@/var/lib/tailscale
+	mkdir -p tmp/$@/var/lib/tailscale/pod
+	(cd tmp/$@ && pass tailscale_k3d-$@ | base64 -d | tar xvf -)
+	(cd tmp/$@/var/lib/tailscale/pod && pass tailscale_$@-0 | base64 -d | tar xvf -)
 	-flyctl secrets set -a $@ --detach \
-		DEFN_DEV_TAILSCALE_STATE="$$(pass tailscale_$@)" \
+		DEFN_DEV_ARCHIVE="$$(cd tmp/$@ && tar cvf - . | base64 | xargs | sed 's# ##g')" \
 		DEFN_DEV_HOST="$@.$(domain)" \
 		PASSWORD="$$(pass pass-code-server)"
 	flyctl deploy -a $@ --remote-only --config app.toml
