--- a/caddy/kuma/grove-dp.yaml
+++ b/caddy/kuma/grove-dp.yaml
@@ -14,6 +14,15 @@ networking:
     - port: 6001
       tags:
         kuma.io/service: nginx_default_svc_80
-    - port: 6002
+    - port: 6003
       tags:
         kuma.io/service: immanent
+    - port: 6004
+      tags:
+        kuma.io/service: so
+    - port: 6005
+      tags:
+        kuma.io/service: the
+    - port: 6006
+      tags:
+        kuma.io/service: brie
