--- a/caddy/kuma/docker-compose.yml
+++ b/caddy/kuma/docker-compose.yml
@@ -4,3 +4,8 @@ services:
             - 4999:80
         image: traefik/whoami
         restart: always
+    squid:
+        build: .
+        ports:
+            - "3128:3128"
+        restart: always
