--- a/Makefile.site
+++ b/Makefile.site
@@ -83,7 +83,7 @@ provision-digital-ocean:
 debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
 
-# env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$HOME/work/app
+# env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$HOME/app
 this:
 	-$(MAKE) macos
 	rm -rf tmp
