add argocd and then load the appset

--- a/Makefile.site
+++ b/Makefile.site
@@ -98,4 +98,5 @@ this:
 		DEFN_DEV_HOST_PORT="$${DEFN_DEV_HOST_PORT:-6443}" \
 		$(MAKE) cluster name=$(name)
 	docker run -it --rm --privileged --pid=host alpine:edge nsenter -t 1 -m -u -n -i iptables -t filter -F DOCKER-ISOLATION-STAGE-2
+	if test -n "$(DEFN_DEV_HEADLESS)"; then argocd cluster add --yes --upsert k3d-$(name); pod apply -f $(app)/e/k3d-$(name).yaml; fi
 	
