--- a/Makefile.site
+++ b/Makefile.site
@@ -87,6 +87,9 @@ immanent:
 	env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$(HOME)/app
 	
 this:
+	git pull
+	cd app && git pull
+	cd ~/.password-store && git pull
 	-$(MAKE) macos
 	rm -rf tmp
 	mkdir tmp
