--- a/Makefile.site
+++ b/Makefile.site
@@ -84,7 +84,10 @@ debug-host:
 	pod debug "node/$$(pod get nodes -o json | jq -r '.items[0].metadata.name')" --image quay.io/defn/dev -it -- bash
 
 immanent:
-	env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$(HOME)/app
+	env DEFN_DEV_HEADLESS=1 DEFN_DEV_HOST_PORT=6444 DEFN_DEV_HOST_API=host.k3d.internal make this name=immanent app=$(shell pwd)/app
+
+grove:
+	$(MAKE) this name=grove app=$(shell pwd)/app
 	
 this:
 	git pull
