--- a/Makefile.common
+++ b/Makefile.common
@@ -31,6 +31,7 @@ init:
 	if test -d /work; then sudo install -d -m 0700 -o ubuntu -g ubuntu /work; ln -nfs /work .; fi
 	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
 	if ! test -d work/.; then mkdir -p work; fi
+	if ! test -d app/.; then if test -d work/app/.; then ln -nfs work/app .; fi; fi
 
 	if test -S /var/run/docker.sock; then sudo chgrp docker /var/run/docker.sock; sudo chmod 770 /var/run/docker.sock; fi
 
