override make trgets

--- a/Makefile.common
+++ b/Makefile.common
@@ -48,14 +48,14 @@ init:
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
 	chmod 0700 ~/.gnupg/. ~/.gnupg2/. ~/.password-store/home/.gnupg
 
-	if echo $$VSCODE_GIT_ASKPASS_NODE | grep local/lib/code-server; then $(MAKE) -f app/Makefile.site init-gpg; fi
+	if echo $$VSCODE_GIT_ASKPASS_NODE | grep local/lib/code-server; then $(MAKE) init-gpg; fi
 	if test -z "$$VSCODE_GIT_ASKPASS_NODE"; then $(MAKE) init-gpg; fi
 
 	$(MAKE) git-crypt-unlock
 
 	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then $(MAKE) kubeconfig; $(MAKE) argocd-login || true; fi
 
-	$(MAKE) -f app/Makefile.site init-site
+	$(MAKE) init-site
 
 tilt:
 	env tilt up --context pod --port $(tilt_port)
