--- a/Makefile.common
+++ b/Makefile.common
@@ -28,11 +28,13 @@ dev-meh:
 	@if [[ ! -d work/password-store ]]; then if flock -n ~/.home.lock -c '~/bin/e $(MAKE) init'; then true; fi; fi
 
 init:
+	mark -- configure symlinks
 	if test -d /work; then sudo install -d -m 0700 -o ubuntu -g ubuntu /work; ln -nfs /work .; fi
 	if test -d /mnt/lost+found; then sudo install -d -m 0700 -o ubuntu -g ubuntu /mnt/work; ln -nfs /mnt/work .; fi
 	if ! test -d work/.; then mkdir -p work; fi
 	if ! test -d app/.; then if test -d work/app/.; then ln -nfs work/app .; fi; fi
 
+	mark -- configure permissions
 	if test -S /var/run/docker.sock; then sudo chgrp docker /var/run/docker.sock; sudo chmod 770 /var/run/docker.sock; fi
 
 #	$(MAKE) github-login
@@ -44,17 +46,22 @@ init:
 #		git checkout -- .gitconfig; \
 #		fi
 
+	mark -- configure password-store
 	cd ~/.password-store && git pull
+
+	mark -- configure gpg
 	rsync -ia ~/.password-store/home/.gnupg/. ~/.gnupg/.
 	chmod 0700 ~/.gnupg/. ~/.gnupg2/. ~/.password-store/home/.gnupg
-
 	if echo $$VSCODE_GIT_ASKPASS_NODE | grep local/lib/code-server; then $(MAKE) init-gpg; fi
 	if test -z "$$VSCODE_GIT_ASKPASS_NODE"; then $(MAKE) init-gpg; fi
 
+	mark -- configure git crypt
 	$(MAKE) git-crypt-unlock
 
+	mark -- configure kubeconfig, argocd
 	if test -f /run/secrets/kubernetes.io/serviceaccount/ca.crt; then $(MAKE) kubeconfig; $(MAKE) argocd-login || true; fi
 
+	mark -- configure site
 	$(MAKE) init-site
 
 tilt:
